--- a/html/index.html
+++ b/html/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<form action="">
+<form id="formulario" action="formulario">
+
+    <div id="titulo">
+        <h1>FORMULARIO INICIO <br> DE SESION</h1>
+    </div>
 
     <label for="correo">correo</label>
     <input type="email" name="correo" id="email" required minlength="8" > 
